update the latest changes

--- a/blog-single3.html
+++ b/blog-single3.html
@@ -18,7 +18,7 @@
 
         <div class="blog-contents">
             <p>
-                Hello there. This being my last blog for the Integrated Project one, I would like to quote one of the unconventional ladies in my life."Dare to live! Until the very last breathe. Dare to live! Forget about the past. Dare to live! Giving something of yourself to others, even when it seems there is nothing more left to give. Grow beautiful feathers, colorful and fluffy ones.", making it look like readable English.
+                Hello there. This being my last blog for the Integrated Project one, I would like to quote one of the unconventional ladies in my life."Dare to live! Until the very last breathe. Dare to live! Forget about the past. Dare to live! Giving something of yourself to others, even when it seems there is nothing more left to give. Grow beautiful feathers, colorful and fluffy ones."
             </p>
 
             <p>
