--- a/css/fontello/demo.html
+++ b/css/fontello/demo.html
@@ -320,6 +320,9 @@ body {
                 class="i-code">0xe800</span></div>
         <div title="Code: 0xe802" class="the-icons span3"><i class="hippo-icon-photo"></i> <span class="i-name">hippo-icon-photo</span><span
                 class="i-code">0xe802</span></div>
+<div title="Code: 0xe800" class="the-icons span3"><i class="hippo-icon-forward"></i> <span class="i-name">hippo-icon-forward</span><span
+                class="i-code">0xe800</span></div>
+
     </div>
     <div class="row">
         <div title="Code: 0xe804" class="the-icons span3"><i class="hippo-icon-pencil"></i> <span class="i-name">hippo-icon-pencil</span><span
