last changes on the homepage

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 							<h3>Workshops and Training</h3>
 
 							<p>
-								We teach you to apply LATERAL SHORTCUTS® to co-create smart solutions,boosting innovative energy and team spirit.
+								We teach you to apply LATERAL SHORTCUTS® to co-create smart solutions,boosting innovative energy. 
 							</p>
 						</div>
 					</div>
@@ -259,7 +259,7 @@
 							<h3>Motivational Speaking</h3>
 
 							<p>
-								We inspires through interactive presentations, masterclasses and keynote speeches on LATERAL SHORTCUTS®, Design Thinking and Innovation.
+								We inspires through interactive presentations, masterclasses on LATERAL SHORTCUTS®, Design Thinking and Innovation.
 							</p>
 						</div>
 					</div>
